# bookmarks

./: .flake8  .gitignore  .yarnrc  Makefile  README.md  pyproject.toml
bookmarks/: asgi.py  settings.py  urls.py
bookmarks/core/: urls.py  views.py
bookmarks/templates/: base.html  home.html
bookmarks/ui/: .browserslistrc  package.json  tailwind.config.js
bookmarks/ui/js/: main.js
infra/: Dockerfile  app.nomad  system.nomad
infra/overlay/etc/consul.d/: consul.hcl
infra/overlay/etc/cont-init.d/: create-logdirs.sh
infra/overlay/etc/nomad.d/: server.hcl
infra/overlay/etc/services.available.d/consul/: run
infra/overlay/etc/services.available.d/consul/log/: run
infra/overlay/etc/services.available.d/nomad/: run
infra/overlay/etc/services.available.d/nomad/log/: run
infra/overlay/etc/services.d/: consul  nomad
release/: Dockerfile  entry.sh  release.sh
