[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "~3.8"
django = "^3.0.7"
gunicorn = {version = "^20.0.4", optional = true}


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
bpython = "^0.19"
pywatchman = "^1.4.1"

[tool.poetry.extras]
production = ["gunicorn"]

[tool.black]
line-length = 120
skip-string-normalization = true
skip-numeric-underscore-normalization = true
target-version = ["py38"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
